ui fixes of filter spacing

--- a/components/common/asset/asset-grid.module.css
+++ b/components/common/asset/asset-grid.module.css
@@ -9,7 +9,6 @@
 .filter {
   width: 100%;
   order: 2;
-  margin-top:230px;
 }
 
 @media screen and (max-width: 1023px) {
